--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -1,9 +1,9 @@
-name: s3-depl
+name: prod
 
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   build:
@@ -17,6 +17,6 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
       - name: Build React App
-        run: npm install && npm run build
+        run: yarn build
       - name: Deploy app build to S3 bucket
         run: aws s3 sync ./dist/ s3://beergethering.com --delete
