--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Hello world
+        run: echo $REACT_APP_DOMAIN
         env:
           REACT_APP_DOMAIN: ${{ secrets.REACT_APP_AUTH0_DOMAIN }}
       - uses: actions/checkout@v2
