--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -8,18 +8,24 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
-      - name: Hello world
-        run: echo ${{ env.REACT_APP_AUTH0_DOMAIN }}
-        
+    steps:  
       - uses: actions/checkout@v2
+      
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
+  
       - name: Build React App
         run: yarn install && yarn build
+        env:
+          REACT_APP_AUTH0_DOMAIN: ${{ secrets.REACT_APP_AUTH0_DOMAIN }}
+          REACT_APP_AUTH0_CLIENTID: ${{ secrets.REACT_APP_AUTH0_CLIENTID }}
+          REACT_APP_AUTH0_AUDIENCE: ${{ secrets.REACT_APP_AUTH0_AUDIENCE }}
+          REACT_APP_API_URI: ${{ secrets.REACT_APP_API_URI }}
+          REACT_APP_AUTH0_CALLBACK_URL: ${{ secrets.REACT_APP_AUTH0_CALLBACK_URL }}
+          
       - name: Deploy app build to S3 bucket
         run: aws s3 sync ./build s3://beergathering.com/
