--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "graphql": "^15.5.0",
     "styled-icons": "^10.31.0",
     "typescript": "^4.5.4",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "react-scripts": "4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
