--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.3.15",
-    "@auth0/auth0-react": "^1.4.0",
+    "@auth0/auth0-react": "^1.9.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.5",
@@ -13,14 +13,15 @@
     "@mui/styles": "^5.2.3",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.7",
-    "@types/react": "^17.0.38",
+    "@types/react": "^17.0.7",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.19",
     "graphql": "^15.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
+    "react-router": "^6.2.2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.4",
