--- a/package.json
+++ b/package.json
@@ -3,29 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.3.15",
-    "@auth0/auth0-react": "^1.9.0",
+    "@apollo/client": "^3.6.9",
+    "@auth0/auth0-react": "^1.10.2",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.5",
-    "@mui/material": "^5.2.7",
-    "@mui/styled-engine-sc": "^5.1.0",
-    "@mui/styles": "^5.2.3",
+    "@mui/material": "^5.8.5",
+    "@mui/styles": "^5.8.4",
     "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.7",
-    "@types/react": "^17.0.7",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-router-dom": "^5.3.2",
-    "@types/styled-components": "^5.1.19",
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.5",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.25",
     "@types/uuid": "^8.3.4",
-    "graphql": "^15.5.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "graphql": "^16.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "4.0.3",
-    "styled-components": "^5.3.3",
-    "typescript": "^4.5.4",
+    "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
+    "typescript": "^4.7.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -51,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-dom": "^18.0.5"
   }
 }
